<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.ebstrada.formreturn</groupId>
	<artifactId>formreturn-setup</artifactId>
	<version>1.7.5</version>
	<packaging>jar</packaging>

	<name>FormReturn Installer</name>
	<url>https://www.formreturn.com</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<installerMainClass>com.ebstrada.formreturn.installer.Main</installerMainClass>
		<formReturnMainClass>com.ebstrada.formreturn.manager.ui.Main</formReturnMainClass>
		<formReturnServerMainClass>com.ebstrada.formreturn.server.ServerGUI</formReturnServerMainClass>
		<vendor>EB Strada Holdings Pty Ltd</vendor>
		<copyright>Copyright (c) 2006-2020 EB Strada Holdings Pty Ltd. All Rights Reserved.</copyright>
		<formReturnName>FormReturn</formReturnName>
		<windowsVersion>1.7.5.0</windowsVersion>
		<win32JavaArchive>OpenJDK8U-jre_x86-32_windows_hotspot_8u262b10</win32JavaArchive>
		<win32Java>jdk8u262-b10-jre</win32Java>
		<win64JavaArchive>OpenJDK8U-jre_x64_windows_hotspot_8u262b10</win64JavaArchive>
		<win64Java>jdk8u262-b10-jre</win64Java>
		<formReturnServerName>FormReturn Server</formReturnServerName>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<release>17</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jasig.maven</groupId>
				<artifactId>maven-notice-plugin</artifactId>
				<version>1.0.4</version>
				<configuration>
					<noticeTemplate>../etc/notice/NOTICE.template</noticeTemplate>
					<licenseMapping>
						<param>../etc/notice/license-mappings.xml</param>
					</licenseMapping>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.akathist.maven.plugins.launch4j</groupId>
				<artifactId>launch4j-maven-plugin</artifactId>
				<version>2.5.2</version>
				<executions>
					<execution>
						<id>l4j-formreturn</id>
						<phase>package</phase>
						<goals>
							<goal>launch4j</goal>
						</goals>
						<configuration>
							<headerType>gui</headerType>
							<dontWrapJar>true</dontWrapJar>
							<stayAlive>false</stayAlive>
							<icon>${basedir}/icons/formreturn.ico</icon>
							<outfile>${project.build.directory}/formreturn.exe</outfile>
							<jar>lib/formreturn.jar</jar>
							<jre>
							  	<opts>
									<opt>-Dsun.java2d.dpiaware=false</opt>
								</opts>
								<path>jre/</path>
								<minVersion>1.6.0</minVersion>
								<maxHeapSize>1024</maxHeapSize>
							</jre>
							<versionInfo>
								<fileVersion>${windowsVersion}</fileVersion>
								<txtFileVersion>${windowsVersion}</txtFileVersion>
								<fileDescription>${formReturnName}</fileDescription>
								<copyright>${copyright}</copyright>
								<productVersion>${windowsVersion}</productVersion>
								<txtProductVersion>${windowsVersion}</txtProductVersion>
								<productName>${formReturnName}</productName>
								<companyName>${vendor}</companyName>
								<internalName>formreturn</internalName>
								<originalFilename>formreturn.exe</originalFilename>
							</versionInfo>
						</configuration>
					</execution>
					<execution>
						<id>l4j-formreturn-server</id>
						<phase>package</phase>
						<goals>
							<goal>launch4j</goal>
						</goals>
						<configuration>
							<headerType>gui</headerType>
							<dontWrapJar>true</dontWrapJar>
							<stayAlive>false</stayAlive>
							<icon>${basedir}/icons/formreturn_server.ico</icon>
							<outfile>${project.build.directory}/formreturn_server.exe</outfile>
							<jar>lib/formreturn_server.jar</jar>
							<jre>
								<opts>
									<opt>-Dsun.java2d.dpiaware=false</opt>
								</opts>
								<path>jre/</path>
								<minVersion>1.6.0</minVersion>
								<maxHeapSize>512</maxHeapSize>
							</jre>
							<singleInstance>
								<mutexName>${formReturnServerName}</mutexName>
							</singleInstance>
							<versionInfo>
								<fileVersion>${windowsVersion}</fileVersion>
								<txtFileVersion>${windowsVersion}</txtFileVersion>
								<fileDescription>${formReturnServerName}</fileDescription>
								<copyright>${copyright}</copyright>
								<productVersion>${windowsVersion}</productVersion>
								<txtProductVersion>${windowsVersion}</txtProductVersion>
								<productName>${formReturnServerName}</productName>
								<companyName>${vendor}</companyName>
								<internalName>formreturn server</internalName>
								<originalFilename>formreturn_server.exe</originalFilename>
							</versionInfo>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.6.1</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/jpackage-input</outputDirectory>
							<includeScope>runtime</includeScope>
							<stripVersion>true</stripVersion>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<id>uberjar</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<finalName>formreturn_setup_${project.version}</finalName>
							<appendAssemblyId>false</appendAssemblyId>
							<descriptors>
								<descriptor>src/assemble/incjar.xml</descriptor>
							</descriptors>
							<archive>
								<manifest>
									<mainClass>${installerMainClass}</mainClass>
								</manifest>
							</archive>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-antrun-plugin</artifactId>
			    <version>1.8</version>
				<executions>
					<execution>
						<id>create-app-bundle</id>
						<phase>package</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<tasks>
								<mkdir dir="${project.build.directory}/app" />

								<exec executable="jpackage" dir="${basedir}" spawn="false" failonerror="true">
									<arg value="--type" />
									<arg value="app-image" />
									<arg value="--input" />
									<arg value="${project.build.directory}/jpackage-input" />
									<arg value="--main-jar" />
									<arg value="formreturn.jar" />
									<arg value="--main-class" />
									<arg value="${formReturnMainClass}" />
									<arg value="--name" />
									<arg value="${formReturnName}" />
									<arg value="--app-version" />
									<arg value="${project.version}" />
									<arg value="--vendor" />
									<arg value="${vendor}" />
									<arg value="--copyright" />
									<arg value="${copyright}" />
									<arg value="--icon" />
									<arg value="${basedir}/icons/formreturn.icns" />
									<arg value="--dest" />
									<arg value="${project.build.directory}/app" />
									<arg value="--mac-package-identifier" />
									<arg value="com.ebstrada.formreturn.manager" />
									<arg value="--mac-app-category" />
									<arg value="public.app-category.productivity" />
									<arg value="--add-launcher" />
									<arg value="FormReturn Server=${basedir}/jpackage/server-launcher.properties" />
									<arg value="--file-associations" />
									<arg value="${basedir}/jpackage/frf-file-association.properties" />
									<arg value="--file-associations" />
									<arg value="${basedir}/jpackage/frs-file-association.properties" />
									<arg value="--java-options" />
									<arg value="--add-opens=java.desktop/java.awt=ALL-UNNAMED" />
									<arg value="--java-options" />
									<arg value="--add-opens=java.base/java.lang=ALL-UNNAMED" />
									<arg value="--java-options" />
									<arg value="--add-opens=java.desktop/com.apple.laf=ALL-UNNAMED" />
									<arg value="--java-options" />
									<arg value="-Xdock:icon=Contents/Resources/formreturn.icns" />
									<arg value="--java-options" />
									<arg value="-Dapple.laf.useScreenMenuBar=true" />
									<arg value="--java-options" />
									<arg value="-Dcom.apple.macos.use-file-dialog-packages=true" />
									<arg value="--java-options" />
									<arg value="-Dcom.apple.macos.useScreenMenuBar=true" />
									<arg value="--java-options" />
									<arg value="-Dapple.awt.application.name=${formReturnName}" />
									<arg value="--java-options" />
									<arg value="-Dcom.apple.mrj.application.apple.menu.about.name=${formReturnName}" />
									<arg value="--java-options" />
									<arg value="-Dcom.apple.smallTabs=true" />
									<arg value="--java-options" />
									<arg value="-Dfile.encoding=UTF-8" />
									<arg value="--java-options" />
									<arg value="-Xmx1024M" />
								</exec>

								<exec executable="cp" spawn="false">
									<arg line="-p ${basedir}/osx/jsonscan ${project.build.directory}/app/${formReturnName}.app/Contents/Resources" />
								</exec>
							</tasks>
						</configuration>
					</execution>
					<execution>
						<id>update-app-bundle-into-uberjar</id>
						<phase>package</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<tasks>
								<mkdir dir="${project.build.directory}/appbundle" />
								<unjar
									src="${project.build.directory}/formreturn_setup_${project.version}.jar"
									dest="${project.build.directory}/appbundle" />

								<path id="compile.classpath">
									<fileset dir="${project.build.directory}/appbundle/lib">
										<include name="**/*" />
									</fileset>
								</path>
								<pathconvert property="mf.classpath" pathsep=" ">
									<path refid="compile.classpath" />
									<flattenmapper />
								</pathconvert>
								<jar jarfile="${project.build.directory}/appbundle/lib/formreturn_server.jar">
									<manifest>
										<attribute name="Main-Class" value="${formReturnServerMainClass}" />
										<attribute name="Class-Path" value="${mf.classpath}" />
									</manifest>
								</jar>
								<jar jarfile="${project.build.directory}/formreturn_setup_${project.version}.jar" update="true">
									<fileset dir="${project.build.directory}/appbundle">
										<include name="lib/formreturn_server.jar" />
									</fileset>
								</jar>
							</tasks>
						</configuration>
					</execution>
				    </executions>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-dependency-plugin</artifactId>
										<versionRange>[2.0,)</versionRange>
										<goals>
											<goal>copy-dependencies</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>2.8</version>
				<configuration>
					<configLocation>checkstyle_config.xml</configLocation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>2.3</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>2.4.0</version>
			</plugin>
		</plugins>
	</reporting>

	<profiles>
		<profile>
			<id>windows-installer</id>
			<activation>
				<os><family>windows</family></os>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-antrun-plugin</artifactId>
						<executions>
							<execution>
								<id>create-a-windows-signed-nsis-installer</id>
								<phase>package</phase>
								<goals>
									<goal>run</goal>
								</goals>
								<configuration>
									<tasks>
										<exec executable="unzip" spawn="false">
											<arg line="${basedir}/jre/${win32JavaArchive}.zip -d ${project.build.directory}" />
										</exec>

										<move todir="${project.build.directory}/jre">
											<fileset dir="${project.build.directory}/${win32Java}" />
										</move>

										<exec executable="C:\Program Files (x86)\NSIS\makensis.exe" osfamily="winnt">
											<arg value="${basedir}/setup.nsi" />
										</exec>

										<exec executable="makensis" osfamily="unix">
											<arg value="${basedir}/setup.nsi" />
										</exec>

										<copy file="${basedir}/setup_unsigned.exe" tofile="${project.build.directory}/formreturn_setup_${project.version}.exe" />

										<delete file="${basedir}/setup_unsigned.exe" />
									</tasks>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.ebstrada.formreturn</groupId>
			<artifactId>formreturn</artifactId>
			<version>${project.version}</version>
		</dependency>
	</dependencies>
	
</project>
